added and removed some text from experience

--- a/index.html
+++ b/index.html
@@ -471,19 +471,14 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-									   <h2><a href="#">Systems Administrator</a> <span class="timeline-year year-color2">2013-2017</span></h2>
-									   <div class="timeline-workname year-color2">Fidelity National Financial</div>
-									   <li>Provide support and management of network, servers, A/D infrastructure and technical assistant to 14 offices located around the bay area</li>
-									   <li>Installing, configuring, managing and maintenance of all servers and workstations</li>
-									   <li>Installation and upgrade of all network hardware and server rooms (routers, switches,PSUs,rack installations)</li>
-									   <li>Maintenance and support for entire phone system(PRI,POTS,VOIP)</li>
-									   <li>Ensure that all documentation ( network scheme, IP address schemes,Data Lines, Maintenance logs etc.) are all up to date</li>
-									   <li>Manage, administer, and secure all client networks, servers, desktops, laptops, mobile phones, VOIP phones, email</li>
-									   <li>Perform daily backups and data recovery to all servers</li>
-									   <li>Upgrade and maintain updates, security and vulnerability's to all workstations and servers</li>
-									   <li>cable and server room organization and clean up for all offices</li>
-									   <li>technical support and workflow support for all end users (450+ users)</li>
-									   
+									   	<h2><a href="#">Systems Administrator</a> <span class="timeline-year year-color2">2013-2017</span></h2>
+									   	<div class="timeline-workname year-color2">Fidelity National Financial</div>
+									   	<li>Administered Microsoft Windows Servers (Active Directory), HP workstations, and network security devices for 350+ users.</li>
+									   	<li>Implemented Office365 cloud system for email integration with Outlook and mobile devices for all internal users.</li>
+										<li>Set up secure WiFi, LAN and VoIP networks at remote locations, leading client/server configuration and performance-tuning of crucial
+											infrastructure to ensure seamless business operations.</li>
+										<li>Administered all local and remote server backups with Veritas Backup Exec ensuring integrity of critical data.</li>
+									   	<li>Ensure that all documentation ( network scheme, IP address schemes,Data Lines, Maintenance logs etc.) are all up to date</li>
 					               </div>
 					            </div>
 					         </article>
@@ -511,12 +506,9 @@
 					               <div class="timeline-label">
 									   <h2><a href="#">Tier II Technical Support</a><span class="timeline-year year-color4"> 2011-2013</span></h2>
 									   <div class="timeline-workname year-color4">OSTCS</div>
-									   <li>Provided clients support by resolving their technical issues via remote software, Phone, Email</li>
-									   <li>used documentation software to take case notes </li>
-									   <li>Helped create and implement new procedures for work flow</li>
-									   <li>Created technical documentation and procedures for resolution on various computer issues</li>
-									   <li>Assisted in Training and providing technical assistance for other employees</li>
-									   <li>Top case closer for every month ( average of 20 computers fixed a day, over 7000 cases closed)</li>
+									   <li>Provided remote technical support resulting in monthly top case-closer (20 computer average; 6500+ cases closed).</li>
+									   <li>Created technical documentation and procedures for resolution on various computer issues and malware removal</li>
+									   <li>Helped train 60+ employees in troubleshooting and debugging various issues to ensure high quality standard of customer resolution</li>
 					               </div>
 					            </div>
 					         </article>
@@ -529,12 +521,9 @@
 					               <div class="timeline-label">
 									   <h2><a href="#">Computer Technician/Sales</a><span class="timeline-year year-color5"> 2007-2009</span></h2>
 									   <div class="timeline-workname year-color5">Cantrell's Computer Sales and Service</div>
-									   <li>Diagnose and repair desktops, laptops and peripheral devices</li>
-									   <li>Perform installation, diagnosis and repair of all computers and laptops</li>
-									   <li>Troubleshoot computer hardware and software</li>
-									   <li>Resolve network issues as and when required</li>
+									   <li>Diagnosed and repaired desktops, laptops and peripheral devices</li>
 									   <li>Created custom computers according to customers needs(Gaming/Graphic/Server)</li>
-									   <li>Offsite Work - Network/Wifi setup, Onsite PC troubleshooting and Maintenance</li>
+									   <li>Onsite network/wifi setup, PC troubleshooting and maintenance</li>
 									   <li>Ordered/Priced and inventoried all items in the store</li>
 									   <li>Voted best computer shop in Bay area 2-years straight while employed with the company</li>
 					               </div>
