finished about me section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Nima Partovi</strong> </p>
+										<p><strong>Hi I'm Nima Partovi, </strong> I'm a front-end developer who is passionate about programming, building great user experiences, fighting for simplicity over complexity, constantly learning and someone who strives to mentor and share with other developers around me (so, hopefully, they'll mentor and share with me). As a former IT profressional turned to the world of programming, I love figuring out complex problems and fully diving into any project or task that I work on. </p>
 									</div>
 								</div>
 							</div>
