--- a/index.html
+++ b/index.html
@@ -144,6 +144,21 @@
 							</div>
 						</div>
 						<div class="row">
+						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+								<div class="project" style="background-image: url(images/GlobeChat.png);">
+									<div class="desc">
+										<div class="con">
+											<h3><a href="https://react-slack-clone-408cf.firebaseapp.com/">GlobeChat</a></h3>
+											<!-- <span>Website</span>
+											<p class="icon">
+												<span><a href="#"><i class="icon-share3"></i></a></span>
+												<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+												<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											</p> -->
+										</div>
+									</div>
+								</div>
+							</div>
 							<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 								<div class="project" style="background-image: url(images/finders-keepers.jpg);">
 									<div class="desc">
